# slowjs

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: test.yml
examples/: CMakeLists.txt  fib.c  point.c
imgs/: ast.drawio  atom_array.drawio  atom_free_index.drawio  call_convention_bp.drawio  call_convention_callee_before_ret.drawio  call_convention_ret_transform.drawio  closure.drawio  cmake_addsubdirectory.drawio  double_free.drawio  find_roots.drawio  gc_roots.drawio  instr.drawio  open_bindings.drawio  open_bindings_multi.drawio  plain_opcode.drawio  promise-resolve.drawio  promise-then.drawio  promise_fates.drawio  ref_count_basic.drawio  ref_count_dec.drawio  ref_count_inc.drawio  ref_cycle_direct.drawio  ref_cycle_indirect.drawio  ref_cycle_indirect_break.drawio  refcount_dec.drawio  refcount_dec_loop.drawio  refcount_loop_stack.drawio  rt_shape_hash.drawio  shape_init.drawio  shape_prop.drawio  stack_grow_downwards.drawio  stack_instr_cycle.drawio  var_ref.drawio  vm_call_stack.drawio  vm_ops_split.drawio
include/: quickjs-libc.h  quickjs.h
libs/: CMakeLists.txt  cutils.c  cutils.h  libbf.c  libbf.h  libregexp-opcode.h  libregexp.c  libregexp.h  libunicode-table.h  libunicode.c  libunicode.h  list.h  quickjs-libc.c
qjs/: CMakeLists.txt  debug.c  qjs.c  qjscalc.js  repl.js
qjsc/: CMakeLists.txt  qjsc.c
src/: CMakeLists.txt  def.h
src/parse/: asm.c  block.c  class.c  expr.c  func.c  json.c  lex.c  lval.c  mod.c  optim.c  parse.c  parse.h  prim.c  scope.c  stmt.c  utils.c  vardec.c
src/utils/: char.c  char.h  dbuf.c  dbuf.h  kid.c  kid.h
src/vm/: bc.c  bc.h  cfunc.c  cfunc.h  class.c  class.h  conv.c  conv.h  debug.c  debug.h  dump.c  dump.h  error.c  error.h  exec.c  exec.h  func.c  func.h  gc.c  gc.h  instr.h  instrdef.h  iter.c  iter.h  mod.c  mod.h  num.c  num.h  obj.c  obj.h  ops.c  ops.h  shape.c  shape.h  str.c  str.h  stratom.h  vm.c  vm.h
src/vm/intrins/: arr.c  async.c  bign.c  bool.c  date.c  error.c  func.c  gen.c  intrins.c  intrins.h  json.c  mapset.c  math.c  num.c  obj.c  promise.c  proxy.c  reflect.c  regexp.c  str.c  sym.c  typedarr.c  uri.c  utils.c
tests/: CMakeLists.txt  bjson.c  microbench.js  test_bignum.js  test_bjson.js  test_builtin.js  test_closure.js  test_language.js  test_loop.js  test_op_overloading.js  test_qjscalc.js  test_std.js  test_worker.js  test_worker_module.js
tests/http/: CMakeLists.txt  http.cpp
tests/run-test262/: CMakeLists.txt  README.md  run-test262.c  setup_test262.sh
tests/test-col/: run-tests.js  test_col.js
tests/test-col/cases/: break.js  continue.js  dowhile.js  expr_basic.js  for_basic.js  forin_basic.js  forin_destruct.js  forof_basic.js  forof_destruct.js  if_basic.js  return.js  switch.js  throw.js  unicode.js  vardec_basic.js  vardec_destruct.js  while_basic.js
tests/test-op_col_num/: run-tests.js
tests/test-op_col_num/cases/: break.js  class_call_private.js  class_ctor.js  class_method.js  class_prop_init.js  continue.js  dowhile.js  expr_call.js  for_basic.js  forin_basic.js  forin_destruct.js  forof_await.js  forof_basic.js  forof_destruct.js  if_basic.js  literal_arr.js  literal_obj.js  return.js  switch.js  vardec_basic.js  vardec_destruct.js  while_basic.js
tests/test-op_loc/cases/: break.js  class_call_private.js  class_ctor.js  class_method.js  class_prop_init.js  continue.js  dowhile.js  expr_call.js  for_basic.js  forin_basic.js  forin_destruct.js  forof_await.js  forof_destruct.js  if_basic.js  literal_arr.js  return.js  switch.js  vardec_basic.js  vardec_destruct.js  while_basic.js
tests/test-pc2line/: test.js
unicode/: CMakeLists.txt  unicode_download.sh  unicode_gen.c
